# SmartHouse

./: README.md  pyproject.toml
app/: main.py
app/api/: api.py
app/api/v1/: api.py
app/api/v1/dto/: request.py  response.py
app/core/: config.py  routers.py
app/core/settings/: app.py
app/services/auth/: base.py
app/services/devices/: __init__.py  air_conditioner.py  base.py  heater.py  temperature_sensor.py
backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py  health.py
backend/app/core/: routers.py
backend/app/services/auth/: __init__.py
backend/app/services/devices/: base.py  heater.py  temperature_sensor.py
frontend/androidclient/app/: build.gradle
frontend/androidclient/app/src/androidTest/java/com/example/android_client/: ExampleInstrumentedTest.java  ExampleUnitTest.java
frontend/androidclient/app/src/main/: AndroidManifest.xml
frontend/androidclient/app/src/main/java/com/example/android_client/: ControlFragment.java  MainActivity.java
frontend/androidclient/app/src/main/res/layout/: activity_main.xml  fragment_control.xml
frontend/androidclient/app/src/main/res/values/: themes.xml
frontend/androidclient/app/src/main/res/values-night/: themes.xml
frontend/androidclient/app/src/test/java/com/example/android_client/: ExampleUnitTest.java
frontend/androidclient/gradle/wrapper/: gradle-wrapper.properties
