[tool.poetry]
name = "devochki-project"
version = "0.1.0"
description = ""
authors = ["Buharinova Masha, Shamai Eseniya, Visockay Alena"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.19"
jwt = "^1.3.1"
pyjwt = "^2.10.1"
gpiozero = "^2.0.1"
adafruit-circuitpython-dht = "^4.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"